fixed spacing on front page

--- a/custom.css
+++ b/custom.css
@@ -1,41 +1,36 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:900,300);
+
 body {
   background-color: #f0f0f0;
   font-family: lato;
 }
 
-.container {
-  padding-top: 1000px;
-  width: 200px;
-  margin: 500px auto 200px;
+.background {
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
-  padding: 0 20px 20px;
-  border-radius: 6px;
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
+  border-radius: 25px;
+  height: 500px;
+  margin: 6% 10% 10% 10%;
   box-shadow: 0 2px 5px rgba(0,0,0,0.075);
   -webkit-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
   -moz-box-shadow: 0 2px 5px rgba(0,0,0,0.075);
-  text-align: center;
+  
 }
 
-.avatar-flip {
-  border-radius: 100px;
-  overflow: hidden;
-  height: 150px;
-  width: 150px;
-  position: relative;
-  margin-top: 15%;
-  margin-left: 1%;
-  top: -60px;
-
-  box-shadow: 0 0 0 13px #f0f0f0;
-  -webkit-box-shadow: 0 0 0 13px #f0f0f0;
-  -moz-box-shadow: 0 0 0 13px #f0f0f0;
+.basic-info {
+  display: flex;
+  flex-direction: row;
 }
+
+.name {
+  display: flex;
+  flex-direction: column;
+}
+
 
 h2 {
   font-size: 32px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   margin-bottom: 15px;
   color: #333;
